guardando dogs en favoritos

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <span id="error"></span>
         <article>
             <img width="250" alt="Imagen de un perro" id="img1">
-            <button id="btn1" onclick="saveFavoriteDogs()"> Añadir a Favoritos</button>
+            <button id="btn1"> Añadir a Favoritos</button>
         </article>
         <article>
             <img width="250" alt="Imagen de un perro" id="img2">
-            <button id="btn1" onclick="saveFavoriteDogs()"> Añadir a Favoritos</button>
+            <button id="btn2"> Añadir a Favoritos</button>
         </article>
         <button onclick="loadRandomDogs()">Recargar</button>
     </section>
 
-    <section id="favoritesDogs">
+    <section id="favoriteDogs">
         <h2>Dogos Favoritos</h2>
         <article>
             <img width="250" alt="Imagen de un perro" id="img3">
