añadiendo la funcionalidad de borrar favoritos

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section id="favoriteDogs">
         <h2>Dogos Favoritos</h2>
         <article>
-            <img width="250" alt="Imagen de un perro" id="img3">
-            <button id="btn1"> Sacar de Favoritos</button>
+            <img id="img1" width="250" alt="Foto perro favorito">
+            <button>Borrar de favoritos</button>
         </article>
     </section>
 </body>
